--- a/trunk/xOrdineServizio/app.config
+++ b/trunk/xOrdineServizio/app.config
@@ -68,7 +68,7 @@
                 <value>http://www.xorse.it/listing/orse</value>
             </setting>
             <setting name="linkDownloadNuovaVersione" serializeAs="String">
-                <value>http://www.xorse.it/orse/wp-content/plugins/download-monitor/download.php?id=5</value>
+                <value>http://www.xorse.it/orse/</value>
             </setting>
             <setting name="descrizioneParagrafoInterventi" serializeAs="String">
                 <value>Paragrafo 9 - Interventi</value>
