--- a/xOrdineServizio/app.config
+++ b/xOrdineServizio/app.config
@@ -38,7 +38,7 @@
                 <value>IL COMANDANTE</value>
             </setting>
             <setting name="GruppoFirmaRiga2" serializeAs="String">
-                <value>(Mar.Ca.Xxxxx Xxxxx)</value>
+                <value>(Luog. Xxxxx Xxxxx)</value>
             </setting>
             <setting name="comando" serializeAs="String">
                 <value>Stazione Carabinieri di Xxxxxxxxxx</value>
