Modifica al campo perquisizione Adeguamento DB il corso

--- a/xOrdineServizio/OrSe.vbproj
+++ b/xOrdineServizio/OrSe.vbproj
@@ -133,10 +133,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
-    <Compile Include="dbAlegatoADataSet.Designer.vb">
-      <DependentUpon>dbAlegatoADataSet.vb</DependentUpon>
-    </Compile>
-    <Compile Include="dbAlegatoADataSet.vb">
+    <Compile Include="dbAlegatoADataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
       <DependentUpon>dbAlegatoADataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="DBCommand.vb" />
@@ -420,6 +419,7 @@
     <None Include="dbAlegatoADataSet.xsd">
       <SubType>Designer</SubType>
       <LastGenOutput>dbAlegatoADataSet1.Designer.vb</LastGenOutput>
+      <Generator>MSDataSetGenerator</Generator>
     </None>
     <None Include="dbAlegatoADataSet.xss">
       <DependentUpon>dbAlegatoADataSet.xsd</DependentUpon>
