--- a/xOrdineServizio/OrSe.vbproj
+++ b/xOrdineServizio/OrSe.vbproj
@@ -133,6 +133,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="cam.Designer.vb">
+      <DependentUpon>cam.vb</DependentUpon>
+    </Compile>
+    <Compile Include="cam.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Capture.vb" />
     <Compile Include="dbAlegatoADataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -327,6 +334,9 @@
     <None Include="CookComputing.XmlRpcV2.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <EmbeddedResource Include="cam.resx">
+      <DependentUpon>cam.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DInsDatiPreliminari.resx">
       <SubType>Designer</SubType>
       <DependentUpon>DInsDatiPreliminari.vb</DependentUpon>
