--- a/xOrdineServizio/app.config
+++ b/xOrdineServizio/app.config
@@ -118,6 +118,9 @@
             <setting name="revisioneTabelle" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="pathCartellaFotografie" serializeAs="String">
+                <value>\fotografie</value>
+            </setting>
         </OrSe.My.MySettings>
     </userSettings>
     <applicationSettings>
