--- a/xOrdineServizio/app.config
+++ b/xOrdineServizio/app.config
@@ -9,8 +9,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="OrSe.My.MySettings.dbAlegatoAConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\dbAlegatoA.mdb"
-            providerName="System.Data.OleDb" />
+        <add name="OrSe.My.MySettings.dbAlegatoAConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\dbAlegatoA.mdb" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <system.diagnostics>
         <sources>
@@ -53,7 +52,7 @@
                 <value>(Mar.Xxxxx Xxxxx)</value>
             </setting>
             <setting name="protocolloOP85" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="prefissoIndirizzoStazioneCC" serializeAs="String">
                 <value>AL COMANDO STAZIONE CARABINIERI</value>
@@ -62,7 +61,7 @@
                 <value>LEGIONE CARABINIERI TOSCANA</value>
             </setting>
             <setting name="versioneDB" serializeAs="String">
-                <value>3.1</value>
+                <value>3.00</value>
             </setting>
             <setting name="urlAggiornamenti" serializeAs="String">
                 <value>http://www.xorse.it/listing/orse</value>
@@ -104,7 +103,7 @@
                 <value>Dsn=MS Access Database;dbq=C:\Users\tonix\Desktop\OrSeVB2010\xOrdineServizio\dbAlegatoA.mdb;driverid=25;fil=MS Access;maxbuffersize=2048;pagetimeout=5</value>
             </setting>
             <setting name="pathCartellaScrivibile" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="nomeDB" serializeAs="String">
                 <value>dbAlegatoA._db</value>
@@ -118,12 +117,14 @@
             <setting name="revisioneTabelle" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="pathCartellaFotografie" serializeAs="String">
+                <value>\fotografie</value>
+            </setting>
         </OrSe.My.MySettings>
     </userSettings>
     <applicationSettings>
         <OrSe.My.MySettings>
-            <setting name="altezzaRigaDivisioneRigheDataGrigInterventi_IntervalliLiberi"
-                serializeAs="String">
+            <setting name="altezzaRigaDivisioneRigheDataGrigInterventi_IntervalliLiberi" serializeAs="String">
                 <value>5</value>
             </setting>
             <setting name="formHeight" serializeAs="String">
@@ -134,4 +135,4 @@
             </setting>
         </OrSe.My.MySettings>
     </applicationSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
