--- a/xOrdineServizio/My Project/Settings.settings
+++ b/xOrdineServizio/My Project/Settings.settings
@@ -30,7 +30,7 @@
       <Value Profile="(Default)">LEGIONE CARABINIERI TOSCANA</Value>
     </Setting>
     <Setting Name="versioneDB" Type="System.String" Scope="User">
-      <Value Profile="(Default)">3.1</Value>
+      <Value Profile="(Default)">3.00</Value>
     </Setting>
     <Setting Name="urlAggiornamenti" Type="System.String" Scope="User">
       <Value Profile="(Default)">http://www.xorse.it/listing/orse</Value>
@@ -102,6 +102,9 @@
     </Setting>
     <Setting Name="revisioneTabelle" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="pathCartellaFotografie" Type="System.String" Scope="User">
+      <Value Profile="(Default)">\fotografie</Value>
     </Setting>
   </Settings>
 </SettingsFile>
