--- a/xOrdineServizio/packages.config
+++ b/xOrdineServizio/packages.config
@@ -3,4 +3,11 @@
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net48" />
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net35" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net35" />
+  <package id="OpenTK" version="1.1.2225.0" targetFramework="net48" />
+  <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net48" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
+  <package id="ZedGraph" version="5.1.5" targetFramework="net48" />
 </packages>
